Fix the issue of preview on build 20050725